style: fix linenos alignment; post: edit 5 posts; theme: new version

--- a/assets/css/1-custom.css
+++ b/assets/css/1-custom.css
@@ -100,6 +100,10 @@ mark {
   overflow: auto;
 }
 
+.highlight>.chroma>.lntable {
+  overflow: visible;
+}
+
 /* Something for GitHub embed mode ?? */
 
 .gist table tr td {
